# python-oauth2webclient

./: CLAUDE.md  LICENSE  README.md  app.py  config.py  pyproject.toml  requirements.txt  run_https.py
certs/: cert.pem  cert.pem.bak  key.pem
static/css/: style.css
static/js/: script.js
templates/: index.html
