[project]
name = "oauth2app"
version = "0.1.0"
description = "OAuth2 Token Generator - シンプルなOAuth2トークン取得Webアプリケーション"
authors = [
    {name = "OAuth2App", email = "noreply@example.com"}
]
readme = "CLAUDE.md"
license = {text = "MIT"}
requires-python = ">=3.7"
keywords = ["oauth2", "token", "web", "flask", "authentication"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Flask",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: System :: Systems Administration :: Authentication/Directory"
]

dependencies = [
    "flask>=2.2.0,<3.0.0",
    "requests>=2.28.0,<3.0.0",
    "Flask-Session>=0.4.0,<1.0.0",
    "cryptography>=3.4.0,<42.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0"
]

[project.urls]
Homepage = "https://github.com/example/oauth2app"
Repository = "https://github.com/example/oauth2app"
Documentation = "https://github.com/example/oauth2app#readme"
Issues = "https://github.com/example/oauth2app/issues"

[project.scripts]
oauth2app = "app:main"
oauth2app-https = "run_https:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist",
    ".eggs"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests"
]
